--- a/blinds.html
+++ b/blinds.html
@@ -32,7 +32,7 @@
   <meta name="description" content="Apple HomeKit and Google Home compatible smart home blind solutions.  Blind automation | Smart tilt blinds | Hey Siri close the bedroom blinds.">
   
   
-  <title>Smart Blinds | Automation Blinds | Smart Blinds Alexa HomeKit</title>
+  <title>Smart Window Blinds | Smart Blinds Alexa HomeKit | Motorized Smart Blinds</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -115,8 +115,8 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>House-mate smart blind solutions connect motorised blinds to your Wi-Fi network and enable control using HomeKit™ or Siri™.
-</p><p>Conveniently operate your blinds and curtains from anywhere using the HomeKit™ app or by voice using Siri™. Google and Alexa solutions also available. </p><p>"Siri, open the bedroom blinds to 50%".&nbsp;<span style="font-size: 1rem;">Easily program blinds or curtains to be part of an automated scene.</span></p>
+                     <p>Smart window blind solutions connect motorised blinds to your Wi-Fi network and enable control using HomeKit™ or Siri™, Google Home or Alexa.
+</p><p>Conveniently operate your smart home blinds using the HomeKit™ app or by voice using Siri™.. from anywhere! Ikea smart blinds or Somfy or Acmeda? Many brands are compatible.</p><p>"Siri, open the bedroom blinds to 50%".&nbsp;<span style="font-size: 1rem;">Easily program blinds or curtains to be part of an automated scene. Have them open automatically at dawn or close at dusk.</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><span style="font-size: 1rem;">Close selected blinds automatically when the air conditioning activates or when the temperature outside reaches a certain level. Add convenience and comfort, while saving money on your energy bills. Alternatively close blinds automatically when the house is armed at night to improve security.&nbsp;</span></p><p><span style="font-size: 1rem;">Integrate existing motorised blinds without having to replace them. Most popular brands are Somfy and Acmeda, but House-mate works with many more.</span><br></p>
