--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="mbr-card-img-title">
                         
                         <div class="mbr-crt-title">
-                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7"><a href="blinds.html">Blinds</a></h4>
+                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7"><a href="blinds.html">Smart Blinds</a></h4>
                         </div>
                     </div>
                     <div class="card-box">
