--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart window furnishings can be opened or closed on demand, or programmed to operate automatically according to temperature, time of day, or even when the alarm is armed/disarmed. Existing motorised blinds or curtains can be integrated. Alternatively instruct blinds to operate by voice: "Hey Siri, close the west facing blinds".&nbsp;<a href="blinds.html">More about Smart blinds here</a></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart window furnishings can be opened or closed on demand, or programmed to operate automatically according to temperature, time of day, or even when the alarm is armed/disarmed. Existing motorised blinds or curtains can be integrated. Alternatively instruct blinds to operate by voice: "Hey Siri, close the west facing blinds". More about &nbsp;<a href="blinds.html">Smart blinds here</a></p>
                     </div>
                 </div>
             </div>
