--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart alarm system that automatically arms itself when the last person leaves, or disarms itself when the first person arrives at home. Answer the doorbell using your phone from anywhere. Access CCTV security camera vision with real time notifications of any movement or intrusion. <a href="security.html">More info...</a><br><a href="security.html"><br></a><a href="security.html"><br></a></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart alarm system that automatically arms itself when the last person leaves, or disarms itself when the first person arrives at home. Answer the doorbell using your phone from anywhere. Access CCTV security camera vision with real time notifications of any movement or intrusion. More about <a href="security.html">smart security here</a><br><a href="security.html"><br></a><a href="security.html"><br></a></p>
                     </div>
                 </div>
 
