--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart irrigation controls garden watering via a programmable schedule capable of delaying watering automatically if rain is forecasted in your specific area. Alternatively, turn on/off the sprinklers instantly on demand from HomeKit or control the system by voice: “Hey Siri, water the back garden for 10 minutes”. Save water and money with sprinkler automation. <a href="irrigation.html">More info...</a><br><a href="irrigation.html"><br></a><br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart irrigation controls garden watering via a programmable schedule capable of delaying watering automatically if rain is forecasted in your specific area. Alternatively, turn on/off the sprinklers instantly on demand from HomeKit or control the system by voice: “Hey Siri, water the back garden for 10 minutes”. Save water and money with sprinkler automation. More about <a href="irrigation.html">smart irrigation here</a><br><a href="irrigation.html"><br></a><br></p>
                     </div>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="thermostat.html">Smart Heating and Cooling</a><br>Smart thermostats can save a lot of money on energy bills. Turn the thermostat on remotely ahead of arriving home so the house is at the perfect temperature, or alternatively turn it off if you've left home in a hurry and forgot. Bring compatible existing air conditioning or central heating systems into the smart home. <a href="thermostat.html">More info...</a></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="thermostat.html">Smart Heating and Cooling</a><br>Smart thermostats can save a lot of money on energy bills. Turn the thermostat on remotely ahead of arriving home so the house is at the perfect temperature, or alternatively turn it off if you've left home in a hurry and forgot. Bring compatible existing air conditioning or central heating systems into the smart home. More about <a href="thermostat.html">smart thermostats here</a></p>
                     </div>
                 </div>
 
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="remote.html">Smart Entertainment</a><br>Control your TV, projector, or amplifier via HomeKit. &nbsp;Capture regularly used buttons from your remote controls and operate them via your phone or by voice. "Hey Siri, turn on TV". <a href="remote.html">More info...</a>&nbsp;<br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="remote.html">Smart Entertainment</a><br>Control your TV, projector, or amplifier via HomeKit. &nbsp;Capture regularly used buttons from your remote controls and operate them via your phone or by voice. "Hey Siri, turn on TV". More about <a href="remote.html">smart remote control here</a>&nbsp;<br></p>
                     </div>
                 </div>
             </div>
