--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            <a href="garage.html">Smart Garage Door</a><br>Control garage doors or gates via HomeKit, query their status easily from anywhere. Open the garage to accept delivieries. Compatible with most common brands of garage door or gate motors. Put away the old battery operated remote control fob and instruct the garage door from within your car by saying "Hey Siri, open the garage door". <a href="garage.html">More info...</a></p>
+                            <a href="garage.html">Smart Garage Door</a><br>Control garage doors or gates via HomeKit, query their status easily from anywhere. Open the garage to accept delivieries. Compatible with most common brands of garage door or gate motors. Put away the old battery operated remote control fob and instruct the garage door from within your car by saying "Hey Siri, open the garage door". More about <a href="garage.html">smart garage doors here</a></p>
                     </div>
                 </div>
 
