--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="pool.html">Smart Pool and Spa</a><br>Control any swimming pool or spa functions such as temperature, pumps, chlorination. Pre-heat the spa before you come home. "Hey Siri, set the spa temperature to 35 degrees". <a href="pool.html">More info...</a><br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="pool.html">Smart Pool and Spa</a><br>Control any swimming pool or spa functions such as temperature, pumps, chlorination. Pre-heat the spa before you come home. "Hey Siri, set the spa temperature to 35 degrees". More about <a href="pool.html">smart pool and spa here</a><br></p>
                     </div>
                 </div>
             </div>
