--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Lighting control system. Have lights illuminate to a set % between nominated times; bathroom lights set to 10% between midnight and 5am. Easily operate light circuits or alternatively control them without being at home at all. Schedule lights to turn on or off for added security, or simply say "Hey Siri, turn off the downstairs lights" to switch off multiple circuits at once. <a href="lighting.html">More info...</a><br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Lighting control system. Have lights illuminate to a set % between nominated times; bathroom lights set to 10% between midnight and 5am. Easily operate light circuits or alternatively control them without being at home at all. Schedule lights to turn on or off for added security, or simply say "Hey Siri, turn off the downstairs lights" to switch off multiple circuits at once. More about <a href="lighting.html">smart lighting here</a><br></p>
                     </div>
                 </div>
 
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart window furnishings can be opened or closed on demand, or programmed to operate automatically according to temperature, time of day, or even when the alarm is armed/disarmed. Existing motorised blinds or curtains can be integrated. Alternatively instruct blinds to operate by voice: "Hey Siri, close the west facing blinds". More about&nbsp;<a href="blinds.html">smart blinds here.</a></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart window furnishings can be opened or closed on demand, or programmed to operate automatically according to temperature, time of day, or even when the alarm is armed/disarmed. Existing motorised blinds or curtains can be integrated. Alternatively instruct blinds to operate by voice: "Hey Siri, close the west facing blinds". More about&nbsp;<a href="blinds.html">smart blinds here</a></p>
                     </div>
                 </div>
             </div>
