--- a/lighting.html
+++ b/lighting.html
@@ -112,7 +112,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p><span style="font-size: 1rem;">Smart lighting solutions can be installed into existing homes or new homes. Control lights using HomeKit™ or by using Siri™, Google Home, or Alexa.&nbsp;</span></p><p>Dimmable wifi switches are available to control all lights on a circuit. Set your lights to any desired brightness level with ease at the touch of a button or by voice.</p>
+                     <p><span style="font-size: 1rem;">Smart lighting solutions can be installed into existing homes or new homes. Control lights using HomeKit™ or by using Siri™, Google Home, or Alexa.&nbsp;</span></p><p>In-wall wifi light switches are available that can control all lights on a circuit. Set your lights to any desired brightness level with ease at the touch of a button or by voice.  Alternatively purchase individual smart light bulbs or smart strip lights. Nanoleaf smart light panels are very popular.</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><span style="font-size: 1rem;">Control lights using an automated scene. When&nbsp;</span><span style="font-size: 1rem;">the bathroom lights are activated between 11pm &amp; 6am only illuminate to 20%, or&nbsp;</span><span style="font-size: 1rem;">when the garage door is opened at night turn on the entrance and hallway lights automatically for 10 minutes.</span></p><p><span style="font-size: 1rem;"><br></span></p>
