--- a/lighting.html
+++ b/lighting.html
@@ -173,7 +173,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             In-wall wifi switches</h4>
                         <p class="mbr-text mbr-fonts-style display-7">WiFi in-wall switches are installed by qualified electricians behind your existing wall plates.
-<br>Their size is ~40mm x 40mm x 22mm depending on model. &nbsp;All meet strict AU design standards.</p>
+<br>Their size is ~40mm x 40mm x 22mm depending on model. All meet strict AU design standards.</p>
                     </div>
                 </div>
             </div>
