--- a/lighting.html
+++ b/lighting.html
@@ -34,7 +34,7 @@
   <meta name="description" content="Hey Siri turn on the lights! Control your lighting from your phone. Apple HomeKit compatible lighting solutions. Smart home lighting automation with House-mate.">
   
   
-  <title>Smart Lighting | Lighting Automation</title>
+  <title>Smart Lighting | Smart Bulbs | Smart Switches | Lighting Control</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
