--- a/power.html
+++ b/power.html
@@ -34,7 +34,7 @@
   <meta name="description" content="Control power points using Apple HomeKit or Siri. Convert standard power points to a smart power plug and control it from anywhere.">
   
   
-  <title>Smart Plugs | Smart Home Power Points | Automation</title>
+  <title>Smart Plugs. Smart Power Points</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
