--- a/cbus.html
+++ b/cbus.html
@@ -33,7 +33,7 @@
   <meta name="description" content="CBUS integration into Apple HomeKit and Google Home. Make your CBUS installation much smarter. Enable voice control of any connected CBUS device">
   
   
-  <title>CBUS Automation HomeKit</title>
+  <title>House-mate CBUS Automation | Integrating Homekit and Clipsal CBUS</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
