--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta name="description" content="Smart home automation solutions using Apple, Google, or Alexa. Optimal convenience, security, and peace of mind with a smart home designed by House-Mate.">
   
   
-  <title>Smarthome Solutions | Home Automation Australia | Automated Home</title>
+  <title>Smarthome Solutions |  Intelligent Homes | Smart Homes For Living</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -125,7 +125,7 @@
 
     <div class="container">
         <h2 class="mbr-section-title pb-2 mbr-fonts-style display-2">Home control using one voice enabled app</h2>
-        <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">Start to change the way you interact with your connected home today</h3>
+        <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">Start to change the way you interact with your connected home today with many different home products to choose from.</h3>
 
         <div class="media-container-row pt-5">
             <div class="block-content align-right">
