--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    <br><a href="https://furnando.com.au">©</a> Smart Home Melbourne | House-Mate Automations<br>Partners <a href="https://blrsolutions.com.au" target="_blank" rel="noopener noreferrer">BLR Solutions</a> and <a href="https://bpointcomms.com.au" target="_blank" rel=noopener noreferrer">BPoint Security</a><br></p>
+                    <br>Partners <a href="https://blrsolutions.com.au" target="_blank" rel="noopener noreferrer">BLR Solutions</a> and <a href="https://bpointcomms.com.au" target="_blank" rel=noopener noreferrer">BPoint Security</a><br></p>
             </div>
 
 
