--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    <br>Partners <a href="https://blrsolutions.com.au" target="_blank" rel="noopener noreferrer">BLR Solutions</a> and <a href="https://bpointcomms.com.au" target="_blank" rel=noopener noreferrer">BPoint Security</a><br></p>
+                    <br>Partners <a href="https://blrsolutions.com.au" target="_blank" rel="noopener noreferrer">BLR Solutions</a> | <a href="https://bpointcomms.com.au" target="_blank" rel=noopener noreferrer">BPoint Security</a> | <a href="https://developadigital.com.au" target="_blank" rel=noopener noreferrer">Developa Digital</a><br></p>
             </div>
 
 
@@ -338,7 +338,7 @@
     </div>
 </section>
 
-<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">House-Mate Home Automation 2022</p><a style="z-index:1" href="https://house-mate.com.au/index.html"></a></section>
+<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-5">House-Mate Home Automation 2022</p><a style="z-index:1" href="https://house-mate.com.au/index.html"></a></section>
 
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
