--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    <br>Partners <a href="https://blrsolutions.com.au" target="_blank" rel="noopener noreferrer">BLR Solutions</a> | <a href="https://bpointcomms.com.au" target="_blank" rel=noopener noreferrer">BPoint Security</a> | <a href="https://developadigital.com.au" target="_blank" rel=noopener noreferrer">Developa Digital</a><br></p>
+                    <br>Partners <a href="https://blrsolutions.com.au" target="_blank" rel="noopener">BLR Solutions</a> | <a href="https://bpointcomms.com.au" target="_blank" rel="noopener">BPoint Security</a> | <a href="https://developadigital.com.au" target="_blank" rel="noopener">Developa Digital</a><br></p>
             </div>
 
 
