--- a/index - Copy.html
+++ b/index - Copy.html
@@ -334,13 +334,13 @@
                 <div class="social-list align-center">
 <br>
                    
-                    <a class="iconfont-wrapper bg-facebook m-2 " target="_blank" rel="noopener" href="https://www.facebook.com/HousemateAutomation/">
+                    <a class="iconfont-wrapper bg-facebook m-2 " target="_blank" href="https://www.facebook.com/HousemateAutomation/">
                             <span class="socicon-facebook socicon"></span>
                         </a>
-                        <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank" rel="noopener">
+                        <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank">
                             <span class="socicon-twitter socicon"></span>
                         </a>
-                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateaustralia/" target="_blank" rel="noopener">
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateaustralia/" target="_blank">
                             <span class="socicon-instagram socicon"></span>
                         </a>
                         
