--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     </div>
 </section>
 
-<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-9">House-Mate Home Automation 2022</p>
+<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="House-Mate Home Automation" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-9">House-Mate Home Automation 2022</p>
 <a style="z-index:1" href="https://house-mate.com.au/index.html"></a></section>
 
 <br><br>
