--- a/index - Copy.html
+++ b/index - Copy.html
@@ -158,8 +158,8 @@
 
             <div class="mbr-figure m-auto" style="width: 30%;">
                <picture>
-<source type="image/webp" srcset="assets/images/webp/front1-800x385.webp">
-<img src="assets/images/front1-800x385.jpg" alt="House-Mate" title="">
+<source type="image/webp" srcset="assets/images/webp/front1-229x158.webp">
+<img src="assets/images/front1-229x158.jpg" alt="House-Mate" title="">
 
 </picture>
             </div>
@@ -235,8 +235,8 @@
 
             <div class="mbr-figure m-auto" style="width: 30%;">
                 <picture>
-<source type="image/webp" srcset="assets/images/webp/front2-1199x1079.webp">
-<img src="assets/images/front2-1199x1079.jpg" alt="House-mate" title="">
+<source type="image/webp" srcset="assets/images/webp/front2-229x158.webp">
+<img src="assets/images/front2-229x158.jpg" alt="House-mate" title="">
 
 </picture>
             </div>
@@ -334,13 +334,13 @@
                 <div class="social-list align-center">
 <br>
                    
-                    <a class="iconfont-wrapper bg-facebook m-2 " target="_blank" href="https://www.facebook.com/HousemateAutomation/">
+                    <a class="iconfont-wrapper bg-facebook m-2 " target="_blank" rel="noopener" href="https://www.facebook.com/HousemateAutomation/">
                             <span class="socicon-facebook socicon"></span>
                         </a>
-                        <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank">
+                        <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank" rel="noopener">
                             <span class="socicon-twitter socicon"></span>
                         </a>
-                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateaustralia/" target="_blank">
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateaustralia/" target="_blank" rel="noopener">
                             <span class="socicon-instagram socicon"></span>
                         </a>
                         
@@ -350,7 +350,7 @@
     </div>
 </section>
 
-<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-9">House-Mate Home Automation 2022</p>
+<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="House-Mate Home Automation" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-9">House-Mate Home Automation 2022</p>
 <a style="z-index:1" href="https://house-mate.com.au/index.html"></a></section>
 
 <br><br>
