--- a/power.html
+++ b/power.html
@@ -110,7 +110,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>Smart power point (GPO) solutions connect standard 240 volt outlets to your Wi-Fi network and enable control of the smart plug or board using HomeKit™ or Siri™, Google Home or Alexa.</p><p>Smart power points are a very affordable way of gaining control at the outlet.&nbsp;<span style="font-size: 1rem;">Whether it be a coffee machine, a lamp, an electric blanket or a pump... install a smart plug on any wall outlet.</span></p>
+                     <p>Smart power points (GPO) connect standard 240 volt outlets to your Wi-Fi network and enable control of the smart plug or smart board using HomeKit™ or Siri™, Google Home or Alexa.</p><p>Smart power points are a very affordable way of gaining control at the outlet.&nbsp;<span style="font-size: 1rem;">Whether it be a coffee machine, a lamp, an electric blanket or a pump... install a smart plug on any wall outlet.</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><span style="font-size: 1rem;">They can be plugged in anywhere and easily controlled manually. Simple to move around your home if required.&nbsp;</span></p><p><span style="font-size: 1rem;">Schedule the power point to operate at certain times of day or link its operation to a scene... such as when the alarm is armed or when the first person arrives home.</span><br></p>
