--- a/blinds.html
+++ b/blinds.html
@@ -32,7 +32,7 @@
   <meta name="description" content="Apple HomeKit and Google Home compatible smart home blind solutions.  Blind automation | Smart tilt blinds | Hey Siri close the bedroom blinds.">
   
   
-  <title>Smart Window Blinds | Smart Blinds Alexa | Motorized Smart Blinds</title>
+  <title>Smart Window Blinds. Motorized Blind Integration. Blind control with Alexa.</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
