--- a/cbus.html
+++ b/cbus.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="canonical" href="https://house-mate.com.au/cbus.html" />
-<meta property="og:title" content="House-mate Smart Home Automation">
+<meta property="og:title" content="House-Mate Smart Home Automation">
 <meta property="og:description" content="Affordable and centralised CBUS home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
@@ -33,7 +33,7 @@
   <meta name="description" content="CBUS integration into Apple HomeKit and Google Home. Make your CBUS installation much smarter. Enable voice control of any connected CBUS device">
   
   
-  <title>House-mate CBUS Automation | Integrating Homekit and Clipsal CBUS</title>
+  <title>House-Mate CBUS Automation. Integrating Homekit and Clipsal CBUS</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
