--- a/thermostat.html
+++ b/thermostat.html
@@ -34,7 +34,7 @@
   <meta name="description" content="Apple HomeKit | Google Home | Alexa smart thermostat solutions. Voice assistants to control the temperature. Energy efficient thermostats">
   
   
-  <title>House-mate Thermostat Automation | Smart Wifi Thermostats</title>
+  <title>Smart WiFi Thermostats - HouseMate Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
