change to housemateautomation inst

--- a/cbus.html
+++ b/cbus.html
@@ -259,7 +259,7 @@
                         <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank" rel="noopener">
                             <span class="socicon-twitter socicon"></span>
                         </a>
-                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateaustralia/" target="_blank" rel="noopener">
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateautomation/" target="_blank" rel="noopener">
                             <span class="socicon-instagram socicon"></span>
                         </a>
                         
