--- a/thermostat.html
+++ b/thermostat.html
@@ -263,7 +263,7 @@ The Nest thermostat is popular (due to its sleek appearance at ~$350 unfitted). 
                         <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank" rel="noopener">
                             <span class="socicon-twitter socicon"></span>
                         </a>
-                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateaustralia/" target="_blank" rel="noopener">
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateautomation/" target="_blank" rel="noopener">
                             <span class="socicon-instagram socicon"></span>
                         </a>
                         
