--- a/blinds.html
+++ b/blinds.html
@@ -282,7 +282,7 @@ Now it's possible with small motors that sit in the headrail and control the til
                         <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank" rel="noopener">
                             <span class="socicon-twitter socicon"></span>
                         </a>
-                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateaustralia/" target="_blank" rel="noopener">
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateautomation/" target="_blank" rel="noopener">
                             <span class="socicon-instagram socicon"></span>
                         </a>
                         
