--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                         <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank">
                             <span class="socicon-twitter socicon"></span>
                         </a>
-                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateaustralia/" target="_blank">
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateautomation/" target="_blank">
                             <span class="socicon-instagram socicon"></span>
                         </a>
                         
