--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta name="description" content="Smart home automation solutions using Apple, Google, or Alexa. Optimal convenience, security, and peace of mind with a smart home designed by House-Mate.">
   
   
-  <title>Smarthome Solutions |  Intelligent Homes | Smart Homes For Living</title>
+  <title>Smart Home Solutions. Intelligent Homes For Living.</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
