--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><br>House-Mate Automation&nbsp;<br></h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Smart home solutions &amp; installation</h3>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Control lighting, alarm system &amp; security cameras, blinds, irrigation, thermostats, garage door, gates and more... from anywhere for optimal convenience, security, and peace of mind.</p><p><a href="index.html#bottom"></a>Smart home control | Suits existing homes or new builds | Delivers a truly integrated system. <br>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Control lighting, alarm system &amp; security cameras, blinds, irrigation, thermostats, garage door & gates, pool & spa, AV equipment and more... from anywhere for optimal convenience, security, and peace of mind.</p><p><a href="index.html#bottom"></a>Smart home control | Suits existing homes or new builds | Delivers a truly integrated system. <br>
 <br>Specialists in home automation. You choose whether your connected home is Apple HomeKit™, Google Home™, or Amazon Alexa™.<br></p><p></p>
                 
             </div>
