--- a/remote.html
+++ b/remote.html
@@ -161,9 +161,7 @@ There are several devices that can be controlled using a Universal Remote Contro
 - Air Conditioner<br>
 - Amplifier / Tuner / Home Cinema / Soundbar / Hi-Fi<br>
 - iPod / iPhone / iPad / MP3 / MP4 docking station<br>
-- Satellite / Cable / DVB-T / IPTV receiver<br>
-- Video Cassette Recorder<br>
-</p>
+- Satellite / Cable / DVB-T / IPTV receiver<br></p>
                     </div>
                 </div>
             </div>
