--- a/remote.html
+++ b/remote.html
@@ -150,8 +150,7 @@
                     </div>
                     <div class="card-box">
                         
-                        <p class="mbr-text mbr-fonts-style display-7">No more coffee tables or couches full of remote controls.<br>
-There are several devices that can be controlled using a Universal Remote Control. Some of them are, but not limited to:<br>
+                        <p class="mbr-text mbr-fonts-style display-7">No more coffee tables or couches full of remote controls. There are several devices that can be controlled using a Universal Remote Control. Some of them are, but not limited to:<br>
 
 - TV/LCD/LED/Plasma/OLED/Smart TV<br>
 - Audio Player / Media Center / Media Player<br>
