--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><br>House-Mate Automation&nbsp;<br></h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Smart home solutions &amp; installation</h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Control lighting, alarm system &amp; security cameras, blinds, irrigation, thermostats, garage door & gates, pool & spa, AV equipment and more... from anywhere for optimal convenience, security, and peace of mind.</p><p><a href="index.html#bottom"></a>Smart home control | Suits existing homes or new builds | Delivers a truly integrated system. <br>
-<br>Specialists in home automation. You choose whether your connected home is Apple HomeKit™, Google Home™, or Amazon Alexa™.<br></p><p></p>
+<br>Specialists in home automation. You choose whether your intelligent connected home is Apple HomeKit™, Google Home™, or Amazon Alexa™.<br></p><p></p>
                 
             </div>
         </div>
@@ -350,7 +350,7 @@
     </div>
 </section>
 
-<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-9">House-Mate Home Automation 2022</p>
+<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="House-Mate" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-9">House-Mate Home Automation 2022</p>
 <a style="z-index:1" href="https://house-mate.com.au/index.html"></a></section>
 
 <br><br>
