updated with new search tags

--- a/cbus.html
+++ b/cbus.html
@@ -15,6 +15,17 @@
 <meta name="twitter:image" content="https://house-mate.com.au/assets/images/twitter-image.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
 <link rel="apple-touch-icon" sizes="180x180 href="https://house-mate.com.au/assets/images/webp/apple-touch-icon-180x180.webp">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9G1LWQKVL0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9G1LWQKVL0');
+</script>
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-224447802-1">
 </script>
