--- a/pros-and-cons-of-smart-blinds.html
+++ b/pros-and-cons-of-smart-blinds.html
@@ -68,7 +68,7 @@ summary {
     font-weight: bold;
     margin: -.75em -.75em 0;
     padding: .75em;
-    background-color: #4d1369;
+    background-color: #501c74;
     color: #fff;
 }
 
