--- a/home-automation-for-dummies.html
+++ b/home-automation-for-dummies.html
@@ -160,7 +160,7 @@ details[open] summary {
                     
 Home Automation is the way to go these days. Today in the ever changing world of technology, the market for smart homes and automation technology is getting bigger, it’s no longer a Jetson's cartoon where your home would be fully automatic, it’s actually a reality.<br>
 <br>
-On the market today there is a wide range of smart home devices and gadgets, starting from lighting, audio systems and equipment’s, to home security systems, thermostats, irrigation, blinds, power points, garage doors, etc. Building a living space that’s automated is easy – as it doesn’t require any scientific knowledge or an engineering background.<br>
+On the market today there is a wide range of smart home devices and gadgets, starting from lighting, to audio video equipment’s, to home security systems, thermostats, irrigation, blinds, power points, garage doors, etc. Building a living space that’s automated is easy – as it doesn’t require any scientific knowledge or an engineering background.<br>
 <br>
 <b>This is for everyone!</b> All you need now is to know where to start. <b>OK, so where do I start?!</b>
 Here at House-Mate Automation smart technologies and automation devices are what we’re all about. If you’re just starting your way in this world, the best thing to do is start with the fundamentals. When talking about smart homes or home automation in general, we’re referring to a variety of devices, gadgets, appliances, and systems, which are connected and communicating with each other, in order to manage your home, autonomously without any input, of course according to your setup. <br>
