--- a/home-automation-for-dummies.html
+++ b/home-automation-for-dummies.html
@@ -158,22 +158,21 @@ details[open] summary {
                
                 <p class="mbr-text mbr-fonts-style display-7">
                     
-Home Automation is the way to go these days. Today in the ever changing world of technology, the market for smart homes and automation technology is getting bigger, it’s no longer a Jetson's cartoon where your home would be fully automatic, it’s actually a reality.<br>
+Today in the ever changing world of technology, the market for smart homes and automation technology products is getting bigger. It's no longer a futuristic cartoon where your home would be fully automatic, it’s actually a reality.<br>
 <br>
-On the market today there is a wide range of smart home devices and gadgets, starting from lighting, to audio video equipment, home security systems, thermostats, irrigation, blinds, power points, garage doors, etc. Building a living space that’s automated is easy – as it doesn’t require any scientific knowledge or an IT engineering background.<br>
+On the market today there is a wide range of smart home devices and gadgets, starting from lighting, to audio video equipment, home security systems, thermostats, irrigation, blinds, power points, garage doors, etc. Building a living space that’s automated is easy – as it doesn’t require any scientific knowledge or an IT engineering background to do so.<br>
 <br>
-<b>This is for everyone!</b> All you need now is to know where to start. <b>OK, so where do I start?!</b>
-Here at House-Mate Automation smart technologies and automation devices are what we’re all about. If you’re just starting your way in this world, the best thing to do is start with the fundamentals. When talking about smart homes or home automation in general, we’re referring to a variety of devices, gadgets, appliances, and systems, which are connected and communicating with each other, in order to manage your home, autonomously without any input, of course according to your setup. <br>
+<b>This is for everyone!</b> All you need now is to know where to start. Here at House-Mate Automation smart technologies and home automation devices are what we’re all about. If you’re just starting in this space the best thing to do is start with the fundamentals. When talking about smart homes or home automation in general, we’re referring to a variety of devices, gadgets, appliances, and systems, which are connected and communicating with each other, in order to manage your home.  Once connected they can autonomously without any input operate your home - of course according to your setup and requirements. <br>
 <br>
-There are a wide range of devices that are in this category out there. Ranging from devices that aren’t fully automated at their own, semi-auto operations mostly, to devices that’s a one-time setup and set-forget.<br>
+There are a wide range of devices that fall into this category. Ranging from devices that aren’t fully automated on their their own, to semi-auto operation, to devices that’s a one-time setup and set-forget.<br>
 <br>
 Many devices and gadgets require minimal input from the user, which is usually done via your smartphone, tablet, any internet-connected device, or even voice or gesture recognition. To make a good example here, door locks that would open via a certain gesture or even a certain device connected, light systems that you can turn on or off through many gestures, or even when you’re not there at all.<br>
 <br>
-Basically, things can be done in two ways, semi-auto devices, and gadgets, or fully automated systems that don’t require any interfering.<br>
+Basically, things can be done in two ways, semi-auto devices, and gadgets, or fully automated systems that don’t require any input whatsoever.<br>
 <br>
 In both ways, the goal here is to reduce or even completely remove the human interference to get things done for your home.<br>
 <br>
-Another thing to understand when you’re looking forward to automating your home, this doesn’t necessarily depend on the type of device. As an example, Smart lights. There are smart lighting systems, or even single light bulbs, which could be controlled from a mobile app or using voice gestures.<br>
+Another thing to understand when you’re looking forward to automating your home, this doesn’t necessarily depend on the type of device. As an example, Smart lights. There are smart lighting systems, smart light switches, or even single light bulbs, which could be controlled from a mobile app or using voice gestures.<br>
 <br>
 With this given, here that bulb is in the criteria of being a smart device. Taking a deeper look, there are other smart bulbs that would offer the ability to be programmed to turn on or off independently, it could be at certain times you pre input, or even with motion sensors ( Like switching the lights on automatically when entering the room and off when there’s no one there).<br>
 <br>
